# plex-scripts

./: .gitignore  README.md  billboard_playlist_generator.py  billboard_scraper.py  fix_music_tags.py  playlist_exporter.py  plex_engine.py  pyproject.toml  sort_playlist.py  spotify_engine.py
src/: billboard_playlist_generator.py  playlist_exporter.py
src/engine/: plex.py  spotify.py  youtube copy.py  youtube.py
src/util/: sorting.py
